Fixed integration and e2e tests